--- a/templates/sales/all_sales.html
+++ b/templates/sales/all_sales.html
@@ -191,23 +191,35 @@
     </tbody>
   </table>
 
-  <!-- 🔹 Pagination -->
+  <!-- 🔹 Pagination (preserves filters via qstring) -->
   <nav aria-label="Page navigation">
     <ul class="pagination justify-content-center">
       {% if sales.has_previous %}
-      <li class="page-item"><a class="page-link" href="?page=1">&laquo; First</a></li>
-      <li class="page-item"><a class="page-link" href="?page={{ sales.previous_page_number }}">Previous</a></li>
+        <li class="page-item">
+          {% if qstring %}<a class="page-link" href="?{{ qstring }}&page=1">&laquo; First</a>{% else %}<a class="page-link" href="?page=1">&laquo; First</a>{% endif %}
+        </li>
+        <li class="page-item">
+          {% if qstring %}<a class="page-link" href="?{{ qstring }}&page={{ sales.previous_page_number }}">Previous</a>{% else %}<a class="page-link" href="?page={{ sales.previous_page_number }}">Previous</a>{% endif %}
+        </li>
       {% endif %}
 
       {% for num in sales.paginator.page_range %}
-      <li class="page-item {% if sales.number == num %}active{% endif %}">
-        <a class="page-link" href="?page={{ num }}">{{ num }}</a>
-      </li>
+        <li class="page-item {% if sales.number == num %}active{% endif %}">
+          {% if qstring %}
+            <a class="page-link" href="?{{ qstring }}&page={{ num }}">{{ num }}</a>
+          {% else %}
+            <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+          {% endif %}
+        </li>
       {% endfor %}
 
       {% if sales.has_next %}
-      <li class="page-item"><a class="page-link" href="?page={{ sales.next_page_number }}">Next</a></li>
-      <li class="page-item"><a class="page-link" href="?page={{ sales.paginator.num_pages }}">Last &raquo;</a></li>
+        <li class="page-item">
+          {% if qstring %}<a class="page-link" href="?{{ qstring }}&page={{ sales.next_page_number }}">Next</a>{% else %}<a class="page-link" href="?page={{ sales.next_page_number }}">Next</a>{% endif %}
+        </li>
+        <li class="page-item">
+          {% if qstring %}<a class="page-link" href="?{{ qstring }}&page={{ sales.paginator.num_pages }}">Last &raquo;</a>{% else %}<a class="page-link" href="?page={{ sales.paginator.num_pages }}">Last &raquo;</a>{% endif %}
+        </li>
       {% endif %}
     </ul>
   </nav>
