client bulk shifting and Past performance admin view

--- a/templates/base.html
+++ b/templates/base.html
@@ -103,6 +103,7 @@
                   <ul class="dropdown-menu" aria-labelledby="clientsDropdown">
                     <li><a class="dropdown-item" href="{% url 'clients:all_clients' %}">All Clients</a></li>
                     <li><a class="dropdown-item" href="{% url 'clients:add_client' %}">Add Client</a></li>
+                    <li><a class="dropdown-item" href="{% url 'clients:bulk_reassign' %}">Bulk Reassignment</a></li>
                   </ul>
                 </li>
                 <!-- Sales Dropdown -->
