employee performance added

--- a/templates/base.html
+++ b/templates/base.html
@@ -117,6 +117,7 @@
                     <li><a class="dropdown-item" href="{% url 'clients:manage_incentive_rules' %}">Incentive Rules</a></li>
                     <li><a class="dropdown-item" href="{% url 'clients:recalc_points' %}">Recalculate Points</a></li>
                     <li><a class="dropdown-item" href="{% url 'clients:client_analysis' %}">Client Analysis</a></li>
+          <li><a class="dropdown-item" href="{% url 'clients:employee_performance' %}">Employee Performance</a></li>
                   </ul>
                 </li>
                 <!-- 🔹 Calling Dropdown (Admin) -->
@@ -166,6 +167,7 @@
                     <li><a class="dropdown-item" href="{% url 'clients:recalc_points' %}">Recalculate Points</a></li>
                     <li><a class="dropdown-item" href="{% url 'clients:client_analysis' %}">Client Analysis</a></li>
                     <li><a class="dropdown-item" href="{% url 'clients:all_sales' %}">All Sales</a></li>
+          <li><a class="dropdown-item" href="{% url 'clients:employee_performance' %}">My Performance</a></li>
                   </ul>
                 </li>
                 <!-- 🔹 Calling Dropdown (Employee) -->
