--- a/templates/base.html
+++ b/templates/base.html
@@ -137,6 +137,7 @@
   </a>
   <ul class="dropdown-menu" aria-labelledby="businessDropdown">
     <li><a href="{% url 'clients:admin_past_performance' %}" class="dropdown-item">Business Tracking</a></li>
+    <li><a class="dropdown-item" href="{% url 'clients:net_business' %}">Net Business</a></li>
     {% comment %} <li><a class="dropdown-item" href="{% url 'tracking:employee_progress' %}">👥 Track Employee Progress</a></li> {% endcomment %}
   </ul>
 </li>
